Добавляет Шапку и заголовок h1

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a
-        href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <div class="container">
+
+      <!-- Шапка -->
+
+      <header class="page-header">
+        <h1 class="visually-hidden">Интернет-магазин мороженого Глейси</h1>
+
+
+
+      </header>
+
+    </div>
 
   </body>
 
