Добавляет разметку Логотипа Шапки

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       <header class="page-header">
         <h1 class="visually-hidden">Интернет-магазин мороженого Глейси</h1>
 
+        <!-- Логотип Шапки -->
 
+        <a class="logo" href="#"><img class="logo" src="#" width="137" height="56"
+            alt="Логотип интернет-магазина мороженого Глейси.">
+        </a>
 
       </header>
 
