Добавляет разметку Навигации по сайту

--- a/index.html
+++ b/index.html
@@ -16,11 +16,35 @@
       <header class="page-header">
         <h1 class="visually-hidden">Интернет-магазин мороженого Глейси</h1>
 
-        <!-- Логотип Шапки -->
+        <!-- Навигация -->
 
-        <a class="logo" href="#"><img class="logo" src="#" width="137" height="56"
-            alt="Логотип интернет-магазина мороженого Глейси.">
-        </a>
+        <nav class="navigation">
+
+          <!-- Навигация по сайту -->
+
+          <ul class="navigation-menu">
+
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html">Каталог</a>
+            </li>
+
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Доставка и оплата</a>
+            </li>
+
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О компании</a>
+            </li>
+
+          </ul>
+
+          <!-- Логотип Шапки -->
+
+          <a class="logo" href="#"><img class="logo" src="#" width="137" height="56"
+              alt="Логотип интернет-магазина мороженого Глейси.">
+          </a>
+
+        </nav>
 
       </header>
 
