Добавляет разметку Навигации пользователя

--- a/index.html
+++ b/index.html
@@ -44,6 +44,27 @@
 
           </ul>
 
+          <!-- Навигация пользователя -->
+
+          <ul class="navigation-user">
+
+            <li class="navigation-item">
+              <a class="header-contacts-address-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+            </li>
+
+            <li class="navigation-item">
+              <a class="navigation-link" href="#"><span class="visually-hidden">Поиск</span></a>
+            </li>
+
+            <li class="navigation-item">
+              <a class="navigation-link" href="#"><span class="visually-hidden">Вход</span></a>
+            </li>
+
+            <li class="navigation-item">
+              <a class="navigation-link" href="#"><span class="visually-hidden">Корзина</span>2 товара</a>
+            </li>
+
+          </ul>
 
 
         </nav>
