Добавляет разметку правой части Слайдера

--- a/index.html
+++ b/index.html
@@ -66,10 +66,72 @@
 
           </ul>
 
-
         </nav>
 
       </header>
+
+      <!-- Главный раздел -->
+
+      <main class="main-index">
+
+        <!-- Слайдер -->
+
+        <section class="slider">
+          <h2 class="visually-hidden">Галерея товаров</h2>
+
+          <!-- Правая часть слайдера -->
+
+          <div class="slider-right-side">
+
+            <!-- Изображение товара на Первом слайде -->
+
+            <div class="slider-image">
+
+              <a class="slider-image-link" href="#"><img class="slider-image-first" src="#" width="327" height="507"
+                  alt="Вафельный рожок с мороженым белого цвета, политый клубничным джемом красного цвета.">
+              </a>
+
+            </div>
+
+            <!-- Уменьшенное изображение товара Второго слайда -->
+
+            <div class="slider-small-image">
+
+              <a class="slider-image-link" href="#"><img class="slider-small-image-second" src="#" width="66"
+                  height="150" alt="Вафельный рожок с мороженым жёлтого цвета.">
+              </a>
+
+            </div>
+
+            <!-- Уменьшенное изображение товара Третьего слайда -->
+
+            <div class="slider-small-image">
+
+              <a class="slider-image-link" href="#"><img class="slider-small-image-third" src="#" width="66"
+                  height="150"
+                  alt="Вафельный рожок с мороженым белого цвета с карамельным топпингом и кусочками зефира.">
+              </a>
+
+            </div>
+
+            <!-- Кнопка переключения слайдов назад -->
+
+            <button class="slider-button slider-prev" type="button">
+              <span class="visually-hidden">Предыдущий товар</span>
+            </button>
+
+            <!-- Кнопка переключения слайдов вперёд -->
+
+            <button class="slider-button slider-next" type="button">
+              <span class="visually-hidden">Следующий товар</span>
+            </button>
+
+
+          </div>
+
+        </section>
+
+      </main>
 
     </div>
 
