Завершает разметку Слайдера
1. Дополняет разметку правой части Слайдера (изображения).

2. Добавляет разметку левой части Слайдера (описание).

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 
         <!-- Слайдер -->
 
-        <section class="slider">
+        <section class="slider slider-first slider-second slider-third">
           <h2 class="visually-hidden">Галерея товаров</h2>
 
           <!-- Правая часть слайдера -->
 
-          <div class="slider-right-side">
+          <div class="slider-right-side slider-right-side-first">
 
             <!-- Изображение товара на Первом слайде -->
 
@@ -114,18 +114,142 @@
 
             </div>
 
-            <!-- Кнопка переключения слайдов назад -->
+            <!-- Кнопка переключения слайдов Назад -->
 
-            <button class="slider-button slider-prev" type="button">
+            <button class="slider-switch-button slider-prev" type="button">
               <span class="visually-hidden">Предыдущий товар</span>
             </button>
 
-            <!-- Кнопка переключения слайдов вперёд -->
+            <!-- Кнопка переключения слайдов Вперёд -->
 
-            <button class="slider-button slider-next" type="button">
+            <button class="slider-switch-button slider-next" type="button">
               <span class="visually-hidden">Следующий товар</span>
             </button>
 
+          </div>
+
+          <!-- Правая часть слайдера -->
+
+          <div class="slider-right-side slider-right-side-second">
+
+            <!-- Изображение товара на Втором слайде -->
+
+            <div class="slider-image">
+
+              <a class="slider-image-link" href="#"><img class="slider-image-second" src="#" width="327" height="507"
+                  alt="Вафельный рожок с мороженым жёлтого цвета.">
+              </a>
+
+            </div>
+
+            <!-- Уменьшенное изображение товара Первого слайда -->
+
+            <div class="slider-small-image">
+
+              <a class="slider-image-link" href="#"><img class="slider-small-image-first" src="#" width="66"
+                  height="150"
+                  alt="Вафельный рожок с мороженым белого цвета, политый клубничным джемом красного цвета.">
+              </a>
+
+            </div>
+
+            <!-- Уменьшенное изображение товара Третьего слайда -->
+
+            <div class="slider-small-image">
+
+              <a class="slider-image-link" href="#"><img class="slider-small-image-third" src="#" width="66"
+                  height="150"
+                  alt="Вафельный рожок с мороженым белого цвета с карамельным топпингом и кусочками зефира.">
+              </a>
+
+            </div>
+
+          </div>
+
+          <!-- Правая часть Третьего слайда -->
+
+          <div class="slider-right-side slider-right-side-third">
+
+            <!-- Изображение товара на Третьем слайде -->
+
+            <div class="slider-image">
+
+              <a class="slider-image-link" href="#"><img class="slider-image-third" src="#" width="327" height="507"
+                  alt="Вафельный рожок с мороженым белого цвета с карамельным топпингом и кусочками зефира.">
+              </a>
+
+            </div>
+
+            <!-- Уменьшенное изображение товара Первого слайда -->
+
+            <div class="slider-small-image">
+
+              <a class="slider-image-link" href="#"><img class="slider-small-image-first" src="#" width="66"
+                  height="150"
+                  alt="Вафельный рожок с мороженым белого цвета, политый клубничным джемом красного цвета.">
+              </a>
+
+            </div>
+
+            <!-- Уменьшенное изображение товара Второго слайда -->
+
+            <div class="slider-small-image">
+
+              <a class="slider-image-link" href="#"><img class="slider-small-image-second" src="#" width="66"
+                  height="150" alt="Вафельный рожок с мороженым жёлтого цвета.">
+              </a>
+
+            </div>
+
+          </div>
+
+          <!-- Описание товара на Первом слайде -->
+
+          <div class="slider-left-side slider-left-side-first">
+
+            <h2 class="slider-title slider-title-first">Нежный пломбир с клубничным джемом</h2>
+
+            <p class="slider-description slider-description-first">Натуральное мороженое из свежих сливок и молока с
+              вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.
+            </p>
+
+            <button class="slider-button" type="button">
+              Заказать
+            </button>
+
+          </div>
+
+          <!-- Описание товара на Втором слайде -->
+
+          <div class="slider-left-side slider-left-side-second">
+
+            <h2 class="slider-title slider-title-second">Сливочное мороженое со вкусом банана</h2>
+
+            <p class="slider-description slider-description-second">Сливочное мороженое с ярким банановым вкусом
+              подарит
+              вам свежесть и наслаждение даже в самый жаркий летний день.
+            </p>
+
+            <button class="slider-button" type="button">
+              Заказать
+            </button>
+
+          </div>
+
+          <!-- Описание товара на Третьем слайде -->
+
+          <div class="slider-left-side slider-left-side-third">
+
+            <h2 class="slider-title slider-title-third">Сливочное мороженое со вкусом банана</h2>
+
+            <p class="slider-description slider-description-third">Сливочное мороженое с ярким банановым вкусом
+              подарит
+              вам свежесть и наслаждение даже в самый жаркий летний день.
+            </p>
+
+            <button class="slider-button" type="button">
+              Заказать
+            </button>
 
           </div>
 
