Дополняет разметку Слайдера
Добавляет Хлебные крошки слайдера

--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
             <h2 class="slider-title slider-title-second">Сливочное мороженое со вкусом банана</h2>
 
             <p class="slider-description slider-description-second">Сливочное мороженое с ярким банановым вкусом
-              подарит
-              вам свежесть и наслаждение даже в самый жаркий летний день.
+              подарит вам свежесть и наслаждение даже в самый жаркий летний день.
             </p>
 
             <button class="slider-button" type="button">
@@ -243,8 +242,7 @@
             <h2 class="slider-title slider-title-third">Сливочное мороженое со вкусом банана</h2>
 
             <p class="slider-description slider-description-third">Сливочное мороженое с ярким банановым вкусом
-              подарит
-              вам свежесть и наслаждение даже в самый жаркий летний день.
+              подарит вам свежесть и наслаждение даже в самый жаркий летний день.
             </p>
 
             <button class="slider-button" type="button">
@@ -252,6 +250,36 @@
             </button>
 
           </div>
+
+          <!-- Хлебные крошки слайдера -->
+
+          <ol class="slider-pagination">
+
+            <li class="slider-pagination-item">
+
+              <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                <span class="visually-hidden">Нежный пломбир с клубничным джемом</span>
+              </button>
+
+            </li>
+
+            <li class="slider-pagination-item">
+
+              <button class="slider-pagination-button" type="button">
+                <span class="visually-hidden">Сливочное мороженое со вкусом банана</span>
+              </button>
+
+            </li>
+
+            <li class="slider-pagination-item">
+
+              <button class="slider-pagination-button" type="button">
+                <span class="visually-hidden">Карамельный пломбир с маршмеллоу</span>
+              </button>
+
+            </li>
+
+          </ol>
 
         </section>
 
