Дополняет разметку Слайдера
Добавляет Иконки социальных сетей слайдера

--- a/index.html
+++ b/index.html
@@ -281,6 +281,35 @@
 
           </ol>
 
+          <!-- Иконки социальных сетей слайдера -->
+
+          <section class="social">
+            <h3 class="visually-hidden">Социальные сети</h3>
+
+            <ul class="social-list">
+
+              <li class="social-item">
+                <a class="button" href="https://t.me/htmlacademy">
+                  <span class="visually-hidden">Telegram</span>
+                </a>
+              </li>
+
+              <li class="social-item">
+                <a class="button" href="https://vk.com/htmlacademy">
+                  <span class="visually-hidden">Vkontakte</span>
+                </a>
+              </li>
+
+              <li class="social-item">
+                <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                  <span class="visually-hidden">Youtube</span>
+                </a>
+              </li>
+
+            </ul>
+
+          </section>
+
         </section>
 
       </main>
