Добавляет раздел подарков

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.
             </p>
 
-            <button class="slider-button" type="button">
+            <button class="button slider-button" type="button">
               Заказать
             </button>
 
@@ -229,7 +229,7 @@
               подарит вам свежесть и наслаждение даже в самый жаркий летний день.
             </p>
 
-            <button class="slider-button" type="button">
+            <button class="button slider-button" type="button">
               Заказать
             </button>
 
@@ -245,7 +245,7 @@
               подарит вам свежесть и наслаждение даже в самый жаркий летний день.
             </p>
 
-            <button class="slider-button" type="button">
+            <button class="button slider-button" type="button">
               Заказать
             </button>
 
@@ -289,19 +289,19 @@
             <ul class="social-list">
 
               <li class="social-item">
-                <a class="button" href="https://t.me/htmlacademy">
+                <a class="social-button" href="https://t.me/htmlacademy">
                   <span class="visually-hidden">Telegram</span>
                 </a>
               </li>
 
               <li class="social-item">
-                <a class="button" href="https://vk.com/htmlacademy">
+                <a class="social-button" href="https://vk.com/htmlacademy">
                   <span class="visually-hidden">Vkontakte</span>
                 </a>
               </li>
 
               <li class="social-item">
-                <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
                   <span class="visually-hidden">Youtube</span>
                 </a>
               </li>
@@ -309,6 +309,53 @@
             </ul>
 
           </section>
+
+        </section>
+
+        <!-- Заказывайте мороженое и получайте подарки! -->
+
+        <section class="presents">
+          <h2 class="presents-title">Заказывайте мороженое и получайте подарки!</h2>
+
+          <!-- Малинка даром! -->
+
+          <div class="presents-list">
+
+            <a class="presents-image-link" href="#"><img class="presents-image" src="#" width="219" height="268"
+                alt="Вафельный рожок с падающими в него ягодами малины.">
+            </a>
+
+            <h3 class="presents-list-title">Малинка даром!</h3>
+
+            <p class="presents-list-description">При покупке 2 кг любого фруктового <br> мороженого добавим в ваш заказ
+              банку малинового варенья бесплатно.
+            </p>
+
+            <button class="button presents-button" type="button">
+              Хочу подарок
+            </button>
+
+          </div>
+
+          <!-- Маршмеллоу даром! -->
+
+          <div class="presents-list">
+
+            <a class="presents-image-link" href="#"><img class="presents-image" src="#" width="219" height="268"
+                alt="Вафельный рожок с падающими в него маршмеллоу.">
+            </a>
+
+            <h3 class="presents-list-title">Маршмеллоу даром!</h3>
+
+            <p class="presents-list-description">При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок
+              совершенно бесплатно.
+            </p>
+
+            <button class="button presents-button" type="button">
+              Хочу подарок
+            </button>
+
+          </div>
 
         </section>
 
