Добавляет разметку раздела предложений

--- a/index.html
+++ b/index.html
@@ -359,6 +359,99 @@
 
         </section>
 
+        <!-- Попробуйте самые популярные вкусы нашего мороженого -->
+
+        <section class="taste">
+          <h2 class="taste-title">Попробуйте самые популярные вкусы нашего мороженого</h2>
+
+          <!-- Малинка -->
+
+          <div class="taste-list">
+
+            <a class="taste-list-image-link" href="#"><img class="taste-list-image" src="#" width="168" height="168"
+                alt="Шарик мороженого цвета малины.">
+            </a>
+
+            <h3 class="taste-list-title">Малинка</h3>
+
+            <p class="taste-list-description">Сливочное мороженое с малиновым джемом
+            </p>
+
+            <span class="taste-list-price">310 ₽/кг</span>
+
+            <div class="taste-list-item">
+              <a class="taste-list-item-link" href="#"><span class="visually-hidden">Корзина</span></a>
+            </div>
+
+          </div>
+
+          <!-- Фисташка -->
+
+          <div class="taste-list">
+
+            <a class="taste-list-image-link" href="#"><img class="taste-list-image" src="#" width="168" height="168"
+                alt="Шарик мороженого цвета фисташки с кусочками шоколада.">
+            </a>
+
+            <h3 class="taste-list-title">Фисташка</h3>
+
+            <p class="taste-list-description">Фисташковый пломбир с кусочками шоколада
+            </p>
+
+            <span class="taste-list-price">340 ₽/кг</span>
+
+            <div class="taste-list-item">
+              <a class="taste-list-item-link" href="#"><span class="visually-hidden">Корзина</span></a>
+            </div>
+
+          </div>
+
+          <!-- Черника -->
+
+          <div class="taste-list">
+
+            <a class="taste-list-image-link" href="#"><img class="taste-list-image" src="#" width="168" height="168"
+                alt="Шарик мороженого белого цвета с черничным джемом.">
+            </a>
+
+            <h3 class="taste-list-title">Черника</h3>
+
+            <p class="taste-list-description">Крем-брюле с черничным джемом
+            </p>
+
+            <span class="taste-list-price">330 ₽/кг</span>
+
+            <div class="taste-list-item">
+              <a class="taste-list-item-link" href="#"><span class="visually-hidden">Корзина</span></a>
+            </div>
+
+          </div>
+
+          <!-- Бабл-гам -->
+
+          <div class="taste-list">
+
+            <a class="taste-list-image-link" href="#"><img class="taste-list-image" src="#" width="168" height="168"
+                alt="Шарик мороженого голубого цвета с разноцветной присыпкой.">
+            </a>
+
+            <h3 class="taste-list-title">Бабл-гам</h3>
+
+            <p class="taste-list-description">Ванильный пломбир со сладкой посыпкой
+            </p>
+
+            <span class="taste-list-price">320 ₽/кг</span>
+
+            <div class="taste-list-item">
+              <a class="taste-list-item-link" href="#"><span class="visually-hidden">Корзина</span></a>
+            </div>
+
+          </div>
+
+        </section>
+
+
+
       </main>
 
     </div>
