Добавляет раздел о компании

--- a/index.html
+++ b/index.html
@@ -450,7 +450,87 @@
 
         </section>
 
+        <!-- О компании -->
 
+        <section class="about">
+          <h2 class="about-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного
+            производства на развес
+          </h2>
+
+          <!-- Собственное производство -->
+
+          <div class="about-list">
+
+            <div class="about-icon">
+
+              <a class="button about-button" href="#">
+                <span class="visually-hidden">Мороженое</span>
+              </a>
+
+            </div>
+
+            <p class="about-list-description">Всё наше мороженое изготавливается на собственном производстве с
+              использованием современного оборудования и проверенных временем технологий.
+            </p>
+
+          </div>
+
+          <!-- Натуральное сырьё -->
+
+          <div class="about-list">
+
+            <div class="about-icon">
+
+              <a class="button about-button" href="#">
+                <span class="visually-hidden">Листик</span>
+              </a>
+
+            </div>
+
+            <p class="about-list-description">Для приготовления мороженого используются сливки и молоко
+              высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.
+            </p>
+
+          </div>
+
+          <!-- Проверенные партнёры -->
+
+          <div class="about-list">
+
+            <div class="about-icon">
+
+              <a class="button about-button" href="#">
+                <span class="visually-hidden">Корова</span>
+              </a>
+
+            </div>
+
+            <p class="about-list-description">Закупка ингредиентов производится только
+              у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.
+            </p>
+
+          </div>
+
+          <!-- Бережная доставка -->
+
+          <div class="about-list">
+
+            <div class="about-icon">
+
+              <a class="button about-button" href="#">
+                <span class="visually-hidden">Градусник</span>
+              </a>
+
+            </div>
+
+            <p class="about-list-description">Доставка нашего мороженого существляется в специальном
+              термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.
+            </p>
+
+          </div>
+
+
+        </section>
 
       </main>
 
