Добавляет ссылку на блог

--- a/index.html
+++ b/index.html
@@ -529,8 +529,20 @@
 
           </div>
 
-
         </section>
+
+        <!-- Ссылка на блог -->
+
+        <article class="blog">
+          <h2 class="blog-title">Новое в нашем блоге</h2>
+
+          <a class="blog-link" href="#">
+            10 способов сервировки фруктовых щербетов к столу
+          </a>
+
+        </article>
+
+
 
       </main>
 
