--- a/index.html
+++ b/index.html
@@ -542,6 +542,26 @@
 
         </article>
 
+        <!-- Подписка на рассылку -->
+
+        <section class="newsletter">
+          <h2 class="visually-hidden">Подписка на рассылку</h2>
+
+          <p class="newsletter-description">Подпишитесь на нашу сладкую рассылку и будьте всегда
+            в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной
+            ерунды. Честно =)</p>
+
+          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+
+            <input class="field" placeholder="email@example.com" type="email" name="newsletter-email"
+              id="newsletter-email" required>
+
+            <button class="button newsletter-button" type="submit">Отправить</button>
+
+          </form>
+
+        </section>
+
 
 
       </main>
