Добавляет раздел доставки

--- a/index.html
+++ b/index.html
@@ -562,7 +562,51 @@
 
         </section>
 
+        <!-- Доставка -->
 
+        <section class="delivery">
+          <h2 class="delivery-title">Доставка любимого мороженого на дом</h2>
+
+          <p class="delivery-description">Хочется полакомиться любимым десертом, но нет времени съездить в
+            магазин? Закажите доставку мороженого на дом, и курьер привезёт вам ваш заказ в течение
+            часа!</p>
+
+          <!-- Форма для заказа -->
+
+          <section class="order">
+            <h3 class="visually-hidden">Форма для заказа</h3>
+
+            <p class="order-description">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.
+            </p>
+
+            <form class="order-form" action="https://echo.htmlacademy.ru/" method="post">
+
+              <p class="order-form-date">
+                <label class="form-label" for="order-date">Дата</label>
+                <input type="text" id="order-date" name="order-date" placeholder="01.04.2020">
+              </p>
+
+              <p class="order-form-phone">
+
+                <label for="order-form-phone">Телефон</label>
+                <input type="text" id="order-form-phone" name="order-form-phone" placeholder="+7 800 999-00-00">
+
+              </p>
+
+              <p class="order-form-address">
+
+                <label class="form-label" for="order-address">Адрес</label>
+                <input type="text" id="order-address" name="order-address" placeholder="ул. Большая Конюшенная, 19/8">
+
+              </p>
+
+              <button class="button" type="submit">Отправить</button>
+
+            </form>
+
+          </section>
+
+        </section>
 
       </main>
 
