Добавляет раздел контактов

--- a/index.html
+++ b/index.html
@@ -600,13 +600,40 @@
 
               </p>
 
-              <button class="button" type="submit">Отправить</button>
+              <button class="button order-button" type="submit">Отправить</button>
 
             </form>
 
           </section>
 
         </section>
+
+        <!-- Контакты -->
+
+        <section class="main-contacts">
+          <h2 class="visually-hidden">Контакты</h2>
+
+          <p class="main-contacts-description">Адрес главного офиса и офлайн-магазина:</p>
+
+          <address class="main-contacts-address">
+
+            <p class="about-text">наб. реки Карповки, 5 лит П, Санкт-Петербург</p>
+
+            <p class="main-contacts-description">Для заказов по телефону:</p>
+
+            <a class="main-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+
+          </address>
+
+          <p class="main-contacts-description">(с 10 до 20 ежедневно)</p>
+
+          <button class="button contacts-button" type="button">Форма обратной связи</button>
+
+        </section>
+
+
+
+
 
       </main>
 
