Добавляет Подвал сайта

--- a/index.html
+++ b/index.html
@@ -631,11 +631,78 @@
 
         </section>
 
-
-
-
-
       </main>
+
+      <!-- Подвал -->
+
+      <footer class="page-footer">
+
+        <!-- Иконки социальных сетей Подвала -->
+
+        <section class="social">
+          <h3 class="visually-hidden">Социальные сети</h3>
+
+          <ul class="social-list">
+
+            <li class="social-item">
+              <a class="social-button" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Telegram</span>
+              </a>
+            </li>
+
+            <li class="social-item">
+              <a class="social-button" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Vkontakte</span>
+              </a>
+            </li>
+
+            <li class="social-item">
+              <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Youtube</span>
+              </a>
+            </li>
+
+          </ul>
+
+        </section>
+
+        <!-- Меню Навигации Подвала -->
+
+        <nav class="footer-navigation">
+
+          <ul class="footer-navigation-menu">
+
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#"><b>Для поставщиков</b></a>
+            </li>
+
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#">Наши документы</a>
+            </li>
+
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#">О производстве</a>
+            </li>
+
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#">Экологические стандарты</a>
+            </li>
+
+          </ul>
+
+        </nav>
+
+        <!-- Логотип htmlacademy -->
+
+        <a class="academy-logo-link" href="#"><img class="academy-logo" src="#" width="93" height="27"
+            alt="Логотип htmlacademy.">
+        </a>
+
+        <p class="academy-logo-description">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html
+            academy</a> ©
+          2021</p>
+
+      </footer>
 
     </div>
 
