--- a/index.html
+++ b/index.html
@@ -9,64 +9,93 @@
 
   <body>
 
-    <div class="container">
+    <div class="wrapper">
 
       <!-- Шапка -->
 
       <header class="page-header">
-        <h1 class="visually-hidden">Интернет-магазин мороженого Глейси</h1>
 
-        <!-- Навигация -->
+        <div class="page-header-container container">
 
-        <nav class="navigation">
+          <h1 class="visually-hidden">Интернет-магазин мороженого Глейси</h1>
 
-          <!-- Логотип Шапки -->
+          <!-- Навигация -->
 
-          <a class="logo" href="#"><img class="logo" src="#" width="137" height="56"
-              alt="Логотип интернет-магазина мороженого Глейси.">
-          </a>
+          <nav class="nav">
 
-          <!-- Навигация по сайту -->
+            <!-- Логотип Шапки -->
 
-          <ul class="navigation-menu">
+            <a class="logo" href="#">
+              <img src="#" width="137" height="56" alt="Логотип интернет-магазина мороженого Глейси.">
+            </a>
 
-            <li class="navigation-item">
-              <a class="navigation-link" href="catalog.html">Каталог</a>
-            </li>
+            <!-- Навигация по сайту -->
 
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">Доставка и оплата</a>
-            </li>
+            <ul class="nav-menu">
 
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">О компании</a>
-            </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-nav-link" href="catalog.html">Каталог</a>
 
-          </ul>
+                <!-- Всплывающий блок -->
+                <div class="nav-drop dropdown-container"></div>
 
-          <!-- Навигация пользователя -->
+              </li>
 
-          <ul class="navigation-user">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Доставка и оплата</a>
+              </li>
 
-            <li class="navigation-item">
-              <a class="header-contacts-address-phone" href="tel:+78005558628">+7 800 555-86-28</a>
-            </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">О компании</a>
+              </li>
 
-            <li class="navigation-item">
-              <a class="navigation-link" href="#"><span class="visually-hidden">Поиск</span></a>
-            </li>
+            </ul>
 
-            <li class="navigation-item">
-              <a class="navigation-link" href="#"><span class="visually-hidden">Вход</span></a>
-            </li>
+            <!-- Навигация пользователя -->
 
-            <li class="navigation-item">
-              <a class="navigation-link" href="#"><span class="visually-hidden">Корзина</span>2 товара</a>
-            </li>
+            <a class="nav-phone" href="tel:+78005558628">+7 800 555-86-28</a>
 
-          </ul>
+            <ul class="nav-user user-menu">
 
-        </nav>
+              <li class="user-item user-item-search dropdown">
+
+                <a class="user-link user-link-search dropdown-nav-link" href="#">
+                  <span class="visually-hidden">Поиск</span>
+                </a>
+
+                <!-- Всплывающий блок -->
+                <div class="search dropdown-container"></div>
+
+              </li>
+
+              <li class="user-item user-item-login dropdown">
+
+                <a class="user-link user-link-login dropdown-nav-link" href="#">
+                  <span class="visually-hidden">Вход</span>
+                </a>
+
+                <!-- Всплывающий блок -->
+                <div class="login dropdown-container"></div>
+
+              </li>
+
+              <li class="user-item user-item-basket dropdown">
+
+                <a class="user-link user-link-basket dropdown-nav-link" href="#">
+                  <span class="visually-hidden">Корзина</span>
+                  <span class="basket-counter">2 товара</span>
+                </a>
+
+                <!-- Всплывающий блок -->
+                <div class="basket dropdown-container"></div>
+
+              </li>
+
+            </ul>
+
+          </nav>
+
+        </div>
 
       </header>
 
