Вносит правки в footer согласно код-ревью

--- a/index.html
+++ b/index.html
@@ -624,38 +624,48 @@
       <!-- Подвал -->
 
       <footer class="page-footer">
-        <!-- Иконки социальных сетей Подвала -->
 
-        <section class="social">
+        <div class="page-footer-container container">
+
+          <!-- Иконки социальных сетей Подвала -->
+
           <h3 class="visually-hidden">Социальные сети</h3>
 
-          <ul class="social-list">
+          <ul class="social-list page-footer-social">
+
             <li class="social-item">
-              <a class="social-button" href="https://t.me/htmlacademy">
+
+              <a class="social-link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Telegram</span>
               </a>
+
             </li>
 
             <li class="social-item">
-              <a class="social-button" href="https://vk.com/htmlacademy">
+
+              <a class="social-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Vkontakte</span>
               </a>
+
             </li>
 
             <li class="social-item">
-              <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
+
+              <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Youtube</span>
               </a>
+
             </li>
+
           </ul>
-        </section>
 
-        <!-- Меню Навигации Подвала -->
 
-        <nav class="footer-navigation">
+          <!-- Меню Навигации Подвала -->
+
           <ul class="footer-navigation-menu">
+
             <li class="footer-navigation-item">
-              <a class="footer-navigation-link" href="#"><b>Для поставщиков</b></a>
+              <a class="footer-navigation-link footer-navigation-link-favorites" href="#">Для поставщиков</a>
             </li>
 
             <li class="footer-navigation-item">
@@ -669,22 +679,30 @@
             <li class="footer-navigation-item">
               <a class="footer-navigation-link" href="#">Экологические стандарты</a>
             </li>
+
           </ul>
-        </nav>
 
-        <!-- Логотип htmlacademy -->
+          <!-- Логотип htmlacademy -->
 
-        <a class="academy-logo-link" href="#"><img class="academy-logo" src="#" width="93" height="27"
-            alt="Логотип htmlacademy." />
-        </a>
+          <div class="page-footer-copyright">
 
-        <p class="academy-logo-description">
-          Сделано в
-          <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
-          © 2021
-        </p>
+            <a class="page-footer-copyright-logo" href="#">
+              <img class="academy-logo" src="#" width="93" height="27" alt="Логотип htmlacademy.">
+            </a>
+
+            <p class="page-footer-copyright-info">Сделано в <a href="https://htmlacademy.ru/">.html academy</a> &#169;
+              2021</p>
+
+          </div>
+
+        </div>
+
       </footer>
+
+      <!-- Модальное окно -->
+
     </div>
+
   </body>
 
 </html>
