Вносит правки в разметку Главной страницы, раздел catalog

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
           <div class="catalog-container container">
 
-            <h2 class="taste-title title">Попробуйте самые популярные вкусы <br>нашего мороженого</h2>
+            <h2 class="catalog-title title">Попробуйте самые популярные вкусы <br>нашего мороженого</h2>
 
             <!-- Малинка -->
 
@@ -311,7 +311,7 @@
                       <img src="#" width="168" height="168" alt="Шарик мороженого цвета малины.">
                     </figure>
 
-                    <h3 class="taste-list-title">Малинка</h3>
+                    <h3 class="catalog-title">Малинка</h3>
 
                   </a>
 
@@ -343,7 +343,7 @@
                       <img src="#" width="168" height="168" alt="Шарик мороженого цвета фисташки с кусочками шоколада.">
                     </figure>
 
-                    <h3 class="taste-list-title">Фисташка</h3>
+                    <h3 class="catalog-title">Фисташка</h3>
 
                   </a>
 
@@ -375,7 +375,7 @@
                       <img src="#" width="168" height="168" alt="Шарик мороженого белого цвета с черничным джемом.">
                     </figure>
 
-                    <h3 class="taste-list-title">Черника</h3>
+                    <h3 class="catalog-title">Черника</h3>
 
                   </a>
 
@@ -408,7 +408,7 @@
                         alt="Шарик мороженого голубого цвета с разноцветной присыпкой.">
                     </figure>
 
-                    <h3 class="taste-list-title">Бабл-гам</h3>
+                    <h3 class="catalog-title">Бабл-гам</h3>
 
                   </a>
 
