Вносит правки в разметку header Главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
 
         <div class="page-header-container container">
 
-          <h1 class="visually-hidden">Интернет-магазин мороженого Глейси</h1>
+          <h1 class="visually-hidden">Каталог Интернет-магазина мороженого Глейси</h1>
 
           <!-- Навигация -->
 
@@ -99,6 +99,14 @@
         </div>
 
       </header>
+
+      <!-- Главный раздел Каталога -->
+
+      <main class="main main-catalog">
+
+
+
+      </main>
 
       <!-- Подвал -->
 
