Добавляет разметку Хлебных крошек Каталога

--- a/catalog.html
+++ b/catalog.html
@@ -104,7 +104,33 @@
 
       <main class="main main-catalog">
 
+        <!-- Хлебные крошки Каталога -->
 
+        <section class="intro">
+
+          <div class="intro-container container">
+            <h2 class="title intro-title">Сливочное мороженое</h2>
+
+            <ul class="breadcrumbs-list list-reset">
+
+              <li class="breadcrumbs-item">
+                <a class="breadcrumbs-link" href="index.html">Главная</a>
+              </li>
+
+              <li class="breadcrumbs-item">
+                <a class="breadcrumbs-link" href="catalog.html">Каталог</a>
+              </li>
+
+              <li class="breadcrumbs-item">
+                <a class="breadcrumbs-link breadcrumbs-link-current" href="#" aria-current="page">Сливочное
+                  мороженое</a>
+              </li>
+
+            </ul>
+
+          </div>
+
+        </section>
 
       </main>
 
