--- a/catalog.html
+++ b/catalog.html
@@ -132,6 +132,166 @@
 
         </section>
 
+        <!-- Фильтр товаров Каталога -->
+
+        <section class="filter">
+
+          <div class="filter-container container">
+            <h2 class="visually-hidden">Фильтр товаров Каталога</h2>
+
+            <form class="filter-form" action="https://echo.htmlacademy.ru/" method="get">
+
+              <!-- Сортировка -->
+
+              <fieldset class="filter-fieldset filter-fieldset-select">
+                <h3 class="filter-form-legend">Сортировка:</h3>
+
+                <select class="filter-select" aria-label="Сортировка">
+                  <option value="popular" selected>Популярности</option>
+                </select>
+
+              </fieldset>
+
+              <!-- Цена -->
+
+              <fieldset class="filter-fieldset filter-fieldset-price">
+
+                <div class="range-container-inputs">
+                  <h3 class="filter-form-legend">Цена: 100 ₽ – 500 ₽</h3>
+
+                  <label class="filter-label" for="range-min">
+                    <input class="range-input range-input-min" id="range-min" type="number" value="100"
+                      name="min-price">&nbsp;₽
+                  </label>
+
+                  <span>&nbsp;–&nbsp;</span>
+
+                  <label class="filter-label" for="range-max">
+                    <input class="range-input range-input-max" id="range-max" type="number" value="500"
+                      name="max-price">&nbsp;₽
+                  </label>
+
+                </div>
+
+                <div class="filter-range">
+
+                  <div class="filter-range-scale">
+
+                    <div class="filter-rage-bar" style="left: 24px; width: 56px">
+
+                      <button class="filter-range-toggle filter-range-toggle-min" type="button">
+                        <span class="visually-hidden">Изменить минимальную цену</span>
+                      </button>
+
+                      <button class="filter-range-toggle filter-range-toggle-max" type="button">
+                        <span class="visually-hidden">Изменить максимальную цену</span>
+                      </button>
+
+                    </div>
+
+                  </div>
+
+                </div>
+
+              </fieldset>
+
+              <!-- Жирность -->
+
+              <fieldset class="filter-fieldset filter-fieldset-fat">
+                <h3 class="filter-form-legend">Жирность:</h3>
+
+                <ul class="filter-list filter-list-fat list-reset">
+
+                  <li class="filter-item">
+                    <label class="filter-label" for="fat-no">
+                      <input class="filter-input-radio" type="radio" id="fat-no" name="fats" value="0%">
+                      <span class="filter-label-text">0%</span>
+                    </label>
+                  </li>
+
+                  <li class="filter-item">
+                    <label class="filter-label" for="fat-10">
+                      <input class="filter-input-radio" id="fat-10" name="fats" type="radio" value="до 10%" checked>
+                      <span class="filter-label-text">до 10%</span>
+                    </label>
+                  </li>
+
+                  <li class="filter-item">
+                    <label class="filter-label" for="fat-30">
+                      <input class="filter-input-radio" id="fat-30" name="fats" type="radio" value="до 30%">
+                      <span class="filter-label-text">до 30%</span>
+                    </label>
+                  </li>
+
+                  <li class="filter-item">
+                    <label class="filter-label" for="fat-more">
+                      <input class="filter-input-radio" id="fat-more" name="fats" type="radio" value="выше 30%">
+                      <span class="filter-label-text">выше 30%</span>
+                    </label>
+                  </li>
+
+                </ul>
+
+              </fieldset>
+
+              <!-- Наполнители -->
+
+              <fieldset class="filter-fieldset filter-fieldset-checkbox">
+                <h3 class="filter-form-legend">Наполнители:</h3>
+
+                <ul class="filter-list filter-list-fillers list-reset">
+
+                  <li class="filter-item">
+                    <label class="filter-label" for="chocolate">
+                      <input class="filter-input-check" type="checkbox" name="chocolate" id="chocolate" checked>
+                      <span class="filter-label-text">шоколадные</span>
+                    </label>
+                  </li>
+
+                  <li class="filter-item">
+                    <label class="filter-label" for="sugar">
+                      <input class="filter-input-check" type="checkbox" name="sugar" id="sugar" checked>
+                      <span class="filter-label-text">сахарные посыпки</span>
+                    </label>
+                  </li>
+
+                  <li class="filter-item">
+                    <label class="filter-label" for="fruits">
+                      <input class="filter-input-check" type="checkbox" name="fruits" id="fruits">
+                      <span class="filter-label-text">фрукты</span>
+                    </label>
+                  </li>
+
+                  <li class="filter-item">
+                    <label class="filter-label" for="syrups">
+                      <input class="filter-input-check" type="checkbox" name="syrups" id="syrups">
+                      <span class="filter-label-text">сиропы</span>
+                    </label>
+                  </li>
+
+                  <li class="filter-item">
+                    <label class="filter-label" for="jams">
+                      <input class="filter-input-check" type="checkbox" name="jams" id="jams">
+                      <span class="filter-label-text">джемы</span>
+                    </label>
+                  </li>
+
+                </ul>
+
+              </fieldset>
+
+              <!-- Кнопка Применить -->
+
+              <button class="button button-outline filter-form-button" type="submit">Применить</button>
+
+            </form>
+
+          </div>
+
+        </section>
+
+
+
       </main>
 
       <!-- Подвал -->
